--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
   "dependencies": {
     "@langchain/openai": "^0.0.25",
     "@pinecone-database/pinecone": "^2.2.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.1.7",
     "langchain": "^0.1.30",
     "next": "14.1.4",
     "pdf-parse": "^1.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
+    "@types/react": "18.3.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.4",
